# del-msh

./: .gitignore  Cargo.toml  README.md
del-cudarc-bvh/: Cargo.toml
del-cudarc-bvh/examples/: 01_raycast_trimesh3.rs
del-cudarc-bvh/src/: bvh.rs  lib.rs  pix2tri.rs
del-msh-bvh-cudarc/: Cargo.toml
del-msh-bvh-cudarc/examples/: 01_raycast_trimesh3.rs
del-msh-bvh-cudarc/src/: bvh.rs  pix2tri.rs
del-msh-candle/: Cargo.toml
del-msh-candle/src/: bvh.rs  bvhnode2aabb.rs  bvhnodes.rs  bvhnodes_morton.rs  cubic_stylization.rs  diffcoord_polyloop2.rs  diffcoord_trimesh3.rs  edge2vtx_trimesh3.rs  elem2center.rs  gd_with_laplacian_reparam.rs  laplacian_smoothing.rs  lib.rs  perturb_tensor.rs  pix2depth.rs  pix2tri.rs  polygonmesh2_to_areas.rs  polygonmesh2_to_cogs.rs  raycast_trimesh.rs  render_meshtri2_vtxcolor.rs  silhouette.rs  trimesh3_to_tri2nrm.rs  voronoi2.rs  vtx2xyz_to_edgevector.rs
del-msh-core/: Cargo.toml
del-msh-core/benches/: bvh.rs
del-msh-core/examples/: 0_trimesh3_remove_intersections.rs  1_symmetry_detection.rs  README.md
del-msh-core/src/: aabbs2.rs  aabbs3.rs  bvh.rs  bvh2.rs  bvh3.rs  bvh3_topology_topdown.rs  bvh_topology_morton.rs  bvhnode2aabb2.rs  bvhnode2aabb3.rs  bvhnodes.rs  bvhnodes_morton.rs  bvhnodes_topdown_trimesh3.rs  convexhull2.rs  convexhull2_intersection.rs  dijkstra.rs  edge2elem.rs  edge2vtx.rs  elem2center.rs  elem2elem.rs  extract.rs  io_nas.rs  io_obj.rs  io_ply.rs  io_svg.rs  io_vtk.rs  kdtree2.rs  lib.rs  map_idx.rs  polygon_mesh.rs  polyline.rs  polyline3.rs  polyloop.rs  polyloop2.rs  polyloop3.rs  sampling.rs  search_bvh2.rs  search_bvh3.rs  transform.rs  tri2vtx.rs  trimesh.rs  (+23 more)
del-msh-cuda-kernel/: Cargo.toml  build.rs
del-msh-cuda-kernel/src/: bvhnodes_morton.cu  laplacian_smoothing_jacobi.cu  lib.rs  mortons.cu  mortons.h  nbody.cu  pix2depth.cu  quad_oct_tree.cu  ray_for_pixel.h  silhouette.cu  trimesh3.cu  uniform_mesh.cu  vtx2vtx.cu
del-msh-cuda-kernels/: Cargo.toml  build.rs
del-msh-cuda-kernels/cuda/: bvhnode2aabb.cu  bvhnodes_morton.cu  dda.h  differentiable_rasterizer.cu  edge2elem.cu  edge2vtx.cu  elem2center.cu  mortons.cu  mortons.h  nbody.cu  pix2depth.cu  pix2tri.cu  polyhedron_mesh.cu  quad_oct_tree.cu  rasterized_edge_gradient.cu  ray_for_pixel.h  trimesh3.cu
del-msh-cuda-kernels/src/: lib.rs
del-msh-cudarc/: Cargo.toml
del-msh-cudarc-kernel/: Cargo.toml  build.rs
del-msh-cudarc-kernel/src/: bvhnode2aabb.cu  edge2vtx.cu  lib.rs  pix2tri.cu
del-msh-cudarc-sys/: Cargo.toml
del-msh-cudarc-sys/src/: lib.rs  vtx2elem.rs  vtx2vtx.rs
del-msh-cudarc/examples/: 01_raycast_trimesh3.rs
del-msh-cudarc/src/: bvh.rs  bvhnode2aabb.rs  bvhnodes_morton.rs  edge2vtx_contour.rs  elem2center.rs  laplacian_smoothing_jacobi.rs  lib.rs  pix2depth.rs  pix2tri.rs  silhouette.rs  vtx2xyz.rs
del-msh-dlpack/: Cargo.toml  make_wheels_win.ps1  pyproject.toml
del-msh-dlpack/del_msh_dlpack/: Raycast.py  TriMesh3.py  Vtx2Vtx.py  __init__.py  optimize_torch.py  util_numpy.py  util_torch.py
del-msh-dlpack/del_msh_dlpack/Array1D/: __init__.py  pt.py  torch.py
del-msh-dlpack/src/: array1d.rs  bvhnode2aabb.rs  differentiable_antialias.rs  differential_rasterizer.rs  edge2elem.rs  edge2vtx.rs  io_cfd_mesh_txt.rs  io_nastran.rs  io_vtk.rs  io_wavefront_obj.rs  lib.rs  mix_mesh.rs  mortons.rs  nbody.rs  offset_array.rs  pix2depth.rs  pix2tri.rs  polyhedron_mesh.rs  quad_oct_tree.rs  rasterized_edge_gradient.rs  trimesh3.rs  trimesh3_primitive.rs  trimesh3_raycast.rs  vtx2elem.rs  vtx2vtx.rs
del-msh-dlpack/tests/: pix2depth.py  test_array1d.py  test_differentiable_antialias.py  test_differential_rasterizer.py  test_mix_mesh.py  test_mortons.py  test_nbody.py  test_pix2depth.py  test_pix2tri.py  test_quad_oct_tree.py  test_rasterized_edge_gradient.py  test_trimesh.py  test_util.py  test_vtx2elem.py  test_vtx2vtx.py
del-msh-examples/: Cargo.toml
del-msh-examples/examples/: 00_gl__fullscrntex.rs  01_cudagl_meshtri3_texture.rs  02_gl_trimesh3d.rs  03_symmetry_detection.rs  04_cuda_raycast_trimesh3.rs  05_raycast_trimesh3.rs  05_trimesh3.rs  06_silhouette.rs  07_anti_aliasing.rs  08_glow_trimesh3.rs  09_glow_trimesh3_texture.rs  10_glow_trimesh3_pick.rs  11_glow_trimesh3_select.rs  12_glow_polyloop2s_inclusion.rs  13_glow_vtx2xyz.rs  14_green.rs  1_symmetry_detection.rs
del-msh-nalgebra/: Cargo.toml
del-msh-nalgebra/src/: lib.rs  polyline.rs  polyloop2.rs  polyloop3.rs  voronoi2.rs
del-msh-numpy/: Cargo.toml  README.ipynb  README.md  pyproject.toml
del-msh-numpy/del_msh/: BlendShape.py  PolyLoop.py  PolygonMesh.py  TriMesh.py  WavefrontObj.py
del-msh-numpy/del_msh_numpy/: AlembicExporter.py  BVH.py  BlendShape.py  DeformMLS.py  KdTree.py  PolyLoop.py  PolygonMesh.py  Polyline.py  Raycast.py  Tet.py  Tri.py  TriMesh.py  WavefrontObj.py  __init__.py
del-msh-numpy/examples/: 00_tri2vtx_vtx2xyz_vtx2rgb.py  01_mesh_view.py  02_mesh_primitive.py  DrawerMesh.py  DrawerMeshVtxColor.py  view_navigation3.py
del-msh-numpy/src/: bvh.rs  dijkstra.rs  dtri.rs  edge2vtx.rs  elem2elem.rs  extract.rs  gradient_distance_extension.rs  io.rs  kdtree.rs  lib.rs  mesh_intersection.rs  polyline.rs  polyloop.rs  primitive.rs  sampling.rs  topology.rs  trimesh3_primitive.rs  trimesh3_raycast.rs  trimesh3_search.rs  unify_index.rs  unindex.rs  vtx2area.rs  vtx2vtx.rs
del-msh-numpy/tests/: test_alembic_export.py  test_bvh.py  test_kdtree.py  test_polyline.py  test_polyloop.py  test_tesselation2d.py  test_trimesh.py  test_trimesh_numpy.py
del-msh-pyo3/: Cargo.toml  README.md  pyproject.toml
del-msh-pyo3/asset/: readme.md
del-msh-pyo3/del_msh/: BVH.py  DeformMLS.py  KdTree.py  Tet.py  Tri.py
del-msh-pyo3/src/: bvh.rs  dijkstra.rs  dtri.rs  edge2vtx.rs  elem2elem.rs  extract.rs  gradient_distance_extension.rs  io.rs  kdtree.rs  lib.rs  mesh_intersection.rs  polyloop.rs  primitive.rs  sampling.rs  topology.rs  trimesh3_search.rs  unify_index.rs  unindex.rs  vtx2area.rs
del-msh-pyo3/tests/: test_bvh.py  test_kdtree.py
examples/: Cargo.toml
examples/examples/: 02_gl_trimesh3d.rs  02_meshtex.rs  1_symmetry_detection.rs
(+229 files in other folders)
