[workspace]
members = [
    "del-msh-pyo3",
    "del-msh-core",
    "del-msh-cudarc",
    "del-msh-candle",
    "examples"
]
exclude = [
    "del-msh-cudarc-kernel"
]
resolver = "2"

[workspace.package]
version = "0.1.39"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-msh/"
description = "mesh utility library for computer graphics research and prototyping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.86"
rand = "0.9.0"
rand_chacha = "0.9.0"
num-traits = "0.2.19"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
pyo3 = { version = "0.23.4", features = ["extension-module"] }
numpy = "0.23.0"
glutin = "0.32.2"
glutin-winit = "0.5.0"
winit = "0.30.9"

# internal
del-msh-core = {path="del-msh-core"}
del-msh-cudarc = {path="del-msh-cudarc"}
del-msh-cudarc-kernel = {path="del-msh-cudarc-kernel"}

# for development
# del-geo-core = { path="../del-geo/del-geo-core"}
# del-gl-core = {path = "../del-gl/del-gl-core"} # this is defined here
# del-gl-winit-glutin = {path = "../del-gl/del-gl-winit-glutin"}
# candle-core = { git="https://github.com/huggingface/candle.git" }

# for GitHub push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
candle-core = { git="https://github.com/huggingface/candle.git" }

# for deploy
# del-geo-core = "=0.1.33"
# del-cudarc = "=0.1.2"
# candle-core = "=0.8.2"


