[workspace]
members = [
    "del-msh-numpy",
    "del-msh-cpu",
    "del-msh-cudarc",
    "del-msh-candle",
    "del-msh-examples"
]
exclude = [
    "del-msh-cuda-kernel"
]
resolver = "2"

[workspace.package]
version = "0.1.41"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-msh/"
description = "mesh utility library for computer graphics research and prototyping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.98"
rand = "0.9.1"
rand_chacha = "0.9.0"
num-traits = "0.2.19"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
numpy = "0.24.0"
rayon = "1.10.0"

# internal
del-msh-cpu = {path= "del-msh-cpu" }
del-msh-cudarc = {path="del-msh-cudarc"}
del-msh-cuda-kernel = {path= "del-msh-cuda-kernel" }

# for development
del-geo-core = { path="../del-geo/del-geo-core"}
# del-gl-core = {path = "../del-gl/del-gl-core"} # this is defined here
# del-gl-winit-glutin = {path = "../del-gl/del-gl-winit-glutin"}
# candle-core = { git="https://github.com/huggingface/candle.git" }
# del-canvas = {path="../del-canvas"} # for color map

# for GitHub push
# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
# candle-core = { git="https://github.com/huggingface/candle.git" }
# del-canvas = {git="https://github.com/nobuyuki83/del-canvas.git"}

# for deploy
# del-geo-core = "=0.1.35"
# del-cudarc = "=0.1.2"
candle-core = "=0.9.0"
del-canvas = "=0.1.7"





