[workspace]
members = [
    "del-msh-numpy",
    "del-msh-dlpack",
    "del-msh-cpu",
    "del-msh-cudarc-safe",
    "del-msh-cudarc-sys",
    "del-msh-candle",
    "del-msh-examples"
]
exclude = [
    "del-msh-cuda-kernel",
    "del-msh-cuda-kernels"
]
resolver = "2"

[workspace.package]
version = "0.1.43"
edition = "2021"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
license = "MIT"
repository = "https://github.com/nobuyuki83/del-msh/"
description = "mesh utility library for computer graphics research and prototyping"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.100"
rand = "0.9.1"
rand_chacha = "0.9.0"
num-traits = "0.2.19"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
numpy = "0.26.0"
rayon = "1.11.0"

# internal
del-msh-cpu = {path= "del-msh-cpu" }
del-msh-cudarc-safe = {path= "del-msh-cudarc-safe" }
del-msh-cuda-kernel = {path= "del-msh-cuda-kernel" }
del-msh-cuda-kernels = {path= "del-msh-cuda-kernels" }

# for development
# candle-core = { git="https://github.com/huggingface/candle.git" }
#del-geo-core = { path="../del-geo/del-geo-core"}
# del-canvas = {path="../del-canvas"} # for color map

# for GitHub push
candle-core = "=0.9.0"
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-canvas = {git="https://github.com/nobuyuki83/del-canvas.git"}


# for deploy
# del-cudarc = "=0.1.2"
# candle-core = "=0.9.0"
# del-geo-core = "=0.1.36"
# del-canvas = "=0.1.7"







