[package]
name = "del-cudarc-bvh"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-msh-bvh-cudarc-kernel", "dep:del-cudarc-util", "dep:cudarc"]

[dependencies]
arrayref.workspace = true
anyhow.workspace = true
num-traits.workspace = true
slice-of-array.workspace = true
itertools.workspace = true
del-msh-core.workspace = true
del-geo-core.workspace = true
del-canvas-image.workspace = true

# cuda dependent
cudarc = {workspace = true, optional = true }
del-cudarc-util = {workspace = true, optional = true }
del-msh-bvh-cudarc-kernel = { workspace = true, optional = true }