[package]
name = "del-msh-candle"
description = "hgoehoge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
cuda = ["candle-core/cuda", "del-msh-cudarc/cuda", "del-cudarc"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
nalgebra.workspace = true
arrayref.workspace = true
serde_json = "1.0.133"
candle-core = { git = "https://github.com/huggingface/candle.git"}
cudarc.workspace = true
del-cudarc = { workspace = true, optional = true}
del-geo-core.workspace = true
del-geo-nalgebra.workspace = true
del-msh-core.workspace = true
del-msh-nalgebra.workspace = true
del-msh-cudarc = { workspace = true, optional = true }
# del-candle = {path="../../del-candle"}

[dev-dependencies]
rand_chacha.workspace = true
