[package]
name = "del-msh-candle"
description = "differentiable mesh processing library using candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
cuda = ["candle-core/cuda", "del-msh-cudarc/cuda", "del-cudarc"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
nalgebra.workspace = true
arrayref.workspace = true
serde_json.workspace = true
del-geo-core.workspace = true
del-geo-nalgebra.workspace = true
candle-core.workspace = true
del-cudarc = { workspace = true, optional = true }

# for develop/push
# del-msh-core.workspace = true
# del-msh-nalgebra.workspace = true
# del-msh-cudarc = { workspace = true, optional = true }

# for delpoy (internal crates must specify version explicitly)
del-msh-core = "0.1.37"
del-msh-cudarc = {  version="=0.1.39", optional = true }
del-msh-nalgebra = "0.1.39"


[dev-dependencies]
rand_chacha.workspace = true
