[package]
name = "del-msh-candle"
description = "differentiable mesh processing library using candle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
cuda = ["candle-core/cuda", "del-msh-cudarc/cuda", "del-cudarc-safe"]

[dependencies]
rand.workspace = true
anyhow.workspace = true
arrayref.workspace = true
del-geo-core.workspace = true
rayon.workspace = true
candle-core.workspace = true

# for develop
# del-msh-cpu.workspace = true
# del-msh-nalgebra.workspace = true
# del-msh-cudarc = { workspace = true, optional = true }
# del-cudarc = { path="../../del-cudarc", optional = true}

# for push
del-msh-cpu.workspace = true
del-msh-cudarc = { workspace = true, optional = true }
del-cudarc-safe = { git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}

# for delpoy (internal crates must specify version explicitly)
# del-msh-cpu = "0.1.37"
# del-msh-cudarc = {  version="=0.1.39", optional = true }
# del-msh-nalgebra = "0.1.39"
# del-cudarc


[dev-dependencies]
rand_chacha.workspace = true
del-canvas = "0.1.7"
image = "0.25.6"