[package]
name = "del-msh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
rand = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
ordered-float = { workspace =true }
arrayref = {workspace = true }
#
del-geo-core = {workspace = true}  #0.1.29"
del-geo-nalgebra ={workspace = true} #  "0.1.29" #

[dev-dependencies]
rand_chacha = {workspace = true}
criterion = "0.5.1"

[[bench]]
name = "bvh"
harness = false