[package]
name = "del-msh-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
rand = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }
nalgebra = { workspace = true }
ordered-float = { workspace =true }
arrayref = {workspace = true }
#
del-geo-core = {workspace = true}
del-geo-nalgebra ={workspace = true}

[dev-dependencies]
rand_chacha = {workspace = true}
criterion = "0.5.1"
del-msh-nalgebra = {workspace = true}

[[bench]]
name = "bvh"
harness = false