[package]
name = "del-msh-cuda-kernel"
description = "hogehoge"
publish = true
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]

[build-dependencies]
bindgen_cuda = "0.1.5"

# for develop
#del-geo-cpp-headers = {path="../../del-geo/del-geo-cpp-headers"}

# for push
del-geo-cpp-headers = {git = "https://github.com/nobuyuki83/del-geo.git"}

# for deploy
# del-geo-cpp-headers = "=0.1.33"