[package]
name = "del-msh-cudarc-kernel"
description = "hogehoge"
# version.workspace = true
# edition.workspace = true
# license.workspace = true

[dependencies]

[build-dependencies]
bindgen_cuda = "0.1.5"
# del-geo-cpp-headers = {path="../../del-geo/del-geo-cpp-headers"}
del-geo-cpp-headers = {git = "https://github.com/nobuyuki83/del-geo.git"}