[package]
name = "del-msh-cudarc-kernel"
description = "hogehoge"
publish = true
version = "0.1.0"
license = "MIT"

[dependencies]

[build-dependencies]
bindgen_cuda = "0.1.5"
# del-geo-cpp-headers = {path="../../del-geo/del-geo-cpp-headers"}
# del-geo-cpp-headers = {git = "https://github.com/nobuyuki83/del-geo.git"}
del-geo-cpp-headers = "0.1.33"