[package]
name = "del-msh-cudarc-sys"
description = "2D/3D Mesh processing using Cuda for scientific prototyping."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-msh-cuda-kernel", "dep:del-cudarc-sys"]

[dependencies]

# for develop
# del-msh-cuda-kernel = { workspace = true, optional = true }
#del-cudarc-sys = { path="../../del-cudarc/del-cudarc-sys", optional = true}

# for push
del-msh-cuda-kernel = { workspace = true, optional = true }
del-cudarc-sys = { git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}

# for deploy (internal crates must be specified locally)
# del-msh-cpu = "=0.1.37"
# del-msh-cuda-kernel = {  version = "=0.1.0", optional = true }