[package]
name = "del-msh-cudarc"
description = "2D/3D Mesh processing using Cuda for scientific prototyping."
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-msh-cudarc-kernel", "dep:del-cudarc"]

[dependencies]
arrayref.workspace = true
num-traits.workspace = true
del-geo-core.workspace = true
del-cudarc = { workspace = true, optional = true}

# for develop
#del-msh-core.workspace = true
#del-msh-cudarc-kernel = { workspace = true, optional = true }

# for deploy (internal crates must be specified locally)
del-msh-core = "=0.1.37"
del-msh-cudarc-kernel = {  version = "=0.1.0", optional = true }