[package]
name = "del-msh-dlpack"
version.workspace = true
edition.workspace = true

[lib]
name = "del_msh_dlpack"
crate-type = ["cdylib"]

[features]
cuda = [
    "dep:del-cudarc-sys",
    "dep:del-msh-cudarc-sys",
    "dep:del-cudarc-kernels",
    "del-msh-cuda-kernels"
]

[dependencies]
pyo3.workspace = true
dlpack = "0.2.0"
del-msh-cpu.workspace = true
arrayref.workspace = true
del-msh-cuda-kernels = { path="../del-msh-cuda-kernels", optional = true }
del-msh-cudarc-sys = { path="../del-msh-cudarc-sys", optional = true, features = ["cuda"]}

# for develop
# del-cudarc-sys = {path = "../../del-cudarc/del-cudarc-sys", optional = true}
# del-cudarc-kernels = { path = "../../del-cudarc/del-cudarc-kernels", optional = true}

# for push
del-cudarc-sys = {git = "https://github.com/nobuyuki83/del-cudarc.git", optional = true}
del-cudarc-kernels = {git = "https://github.com/nobuyuki83/del-cudarc.git", optional = true}

# not using
#del-cudarc-safe = {git = "https://github.com/nobuyuki83/del-cudarc.git", optional = true}