[package]
name = "del-msh-dlpack"
version.workspace = true
edition.workspace = true

[lib]
name = "del_msh_dlpack"
crate-type = ["cdylib"]

[features]
cuda = [
    "dep:del-cudarc-sys",
    "dep:del-msh-cudarc-sys",
    "dep:del-cudarc-kernels",
    "dep:del-msh-cuda-kernels",
    "del-dlpack/cuda"
]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
del-msh-cpu.workspace = true
arrayref.workspace = true
del-dlpack.workspace = true

# local crates
del-msh-cuda-kernels = { path="../del-msh-cuda-kernels", optional = true }
del-msh-cudarc-sys = { path="../del-msh-cudarc-sys", optional = true, features = ["cuda"]}

# for develop (optional)
# del-cudarc-sys = {path = "../../del-cudarc/del-cudarc-sys", optional = true}
# del-cudarc-kernels = { path = "../../del-cudarc/del-cudarc-kernels", optional = true}

# for push (optional)
del-cudarc-sys = {git = "https://github.com/nobuyuki83/del-cudarc.git", optional = true}
del-cudarc-kernels = {git = "https://github.com/nobuyuki83/del-cudarc.git", optional = true}

# not using
#del-cudarc-safe = {git = "https://github.com/nobuyuki83/del-cudarc.git", optional = true}