[package]
name = "del-msh-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
arrayref.workspace = true
slice-of-array.workspace = true
rand.workspace = true
rand_chacha.workspace = true
anyhow.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
winit.workspace = true
del-msh-cpu.workspace = true
del-geo-core.workspace = true
del-gl-core.workspace = true
del-gl-winit-glutin.workspace = true


[build-dependencies]