[package]
name = "del-msh-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[features]
cuda = ["del-msh-cudarc/cuda", "dep:del-cudarc-safe", "dep:del-msh-cuda-kernel"]

[dependencies]
arrayref.workspace = true
slice-of-array.workspace = true
rand.workspace = true
rand_chacha.workspace = true
anyhow.workspace = true
del-msh-cpu.workspace = true
del-geo-core.workspace = true
rayon.workspace = true

# crates specific to this crate
glutin = "0.32.2"
glutin-winit = "0.5.0"
winit = "0.30.9"

del-msh-cudarc = {workspace = true, optional = true}
del-msh-cuda-kernel = {workspace = true, optional = true}
del-cudarc-safe = { git="https://github.com/nobuyuki83/del-cudarc.git", optional = true}

# for develop
# del-canvas = {path = "../../del-canvas"}

# for github push
del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}
del-canvas = {git = "https://github.com/nobuyuki83/del-canvas.git"}

# for deploy
# del-canvas = "0.1.7"




[build-dependencies]