[package]
name = "del-msh-numpy"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_msh_numpy"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace= true
numpy.workspace = true
num-traits.workspace = true
del-geo-core.workspace = true

# for develop/push
del-msh-cpu.workspace = true

# for deploy
# del-msh-cpu = "0.1.36"