[package]
name = "del-msh-numpy"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_msh_numpy"
crate-type = ["cdylib"]

[dependencies]
numpy.workspace = true
num-traits.workspace = true
del-geo-core.workspace = true
arrayref.workspace = true
pyo3 = { version = "0.26.0", features = ["extension-module"] }

# for develop/push
del-msh-cpu.workspace = true

# for deploy
# del-msh-cpu = "0.1.36"