[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[project]
version = "0.1.40"
name = "del-msh-numpy"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy"
]

[tool.maturin]
sdist-include = ["LICENSE", "Readme.md"]
