[package]
name = "del-msh-pyo3"
version = "0.1.22"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_msh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
nalgebra = {workspace = true}
num-traits = {workspace = true}
del-geo = { workspace = true }


del-msh = {path=".."}

# del-msh = "0.1.26"
# del-geo = "0.1.20"