[package]
name = "del-msh-pyo3"
version = {workspace = true}
edition = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_msh"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
numpy = "0.23.0"
nalgebra = {workspace = true}
num-traits = {workspace = true}
del-geo-core = { workspace = true }
del-geo-nalgebra = { workspace = true }

del-msh-core = { path = "../del-msh-core" }
# del-msh-core = "0.1.36"
# del-msh = "0.1.26"
# del-geo = "0.1.20"