[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[project]
version = "0.1.39"
name = "del-msh"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy"
]

[tool.maturin]
sdist-include = ["LICENSE", "Readme.md"]
