[package]
name = "examples-gl"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
arrayref.workspace = true
slice-of-array.workspace = true
rand.workspace = true
rand_chacha.workspace = true
anyhow.workspace = true
glutin = "0.32.2"
glutin-winit = "0.5.0"
winit = "0.30.9"
del-msh-core.workspace = true
del-geo-core.workspace = true

# for develop
del-gl-core = {path = "../../del-gl/del-gl-core"} # this is defined here
del-gl-winit-glutin = {path = "../../del-gl/del-gl-winit-glutin"}

# for push
# del-gl-core = {git = "https://github.com/nobuyuki83/del-gl.git"}
# del-gl-winit-glutin = {git = "https://github.com/nobuyuki83/del-gl.git"}


[build-dependencies]